// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workload Calculation should calculate the workload and respect the given time frame 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-04",
      "expectedHours": 8,
      "worked": 8,
    },
  ],
  "expectedHours": 16,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 100,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 0,
  "workedHours": 16,
}
`;

exports[`Workload Calculation should calculate the workload for one day 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 8,
      "worked": 8,
    },
  ],
  "expectedHours": 8,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 100,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 0,
  "workedHours": 8,
}
`;

exports[`Workload Calculation should calculate the workload for one day and multiple activities 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 8,
      "worked": 8,
    },
  ],
  "expectedHours": 8,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 100,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 0,
  "workedHours": 8,
}
`;

exports[`Workload Calculation should calculate the workload for one day for a half time employee 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 4,
      "worked": 4,
    },
  ],
  "expectedHours": 4,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 100,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 0,
  "workedHours": 4,
}
`;

exports[`Workload Calculation should calculate the workload for one day with absences 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 0,
      "worked": 0,
    },
  ],
  "expectedHours": 0,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 100,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 8,
  "workedHours": 0,
}
`;

exports[`Workload Calculation should calculate the workload for one day with no activities 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 8,
      "worked": 0,
    },
  ],
  "expectedHours": 8,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 0,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 0,
  "workedHours": 0,
}
`;

exports[`Workload Calculation should calculate the workload for one week 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-04",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-05",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-06",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-07",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-08",
      "expectedHours": 8,
      "worked": 8,
    },
  ],
  "expectedHours": 48,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 100,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 0,
  "workedHours": 48,
}
`;

exports[`Workload Calculation should calculate the workload for one week for part time employees 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 4,
      "worked": 4,
    },
    Object {
      "day": "2021-01-04",
      "expectedHours": 4,
      "worked": 4,
    },
    Object {
      "day": "2021-01-05",
      "expectedHours": 4,
      "worked": 4,
    },
    Object {
      "day": "2021-01-06",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-07",
      "expectedHours": 0,
      "worked": 0,
    },
    Object {
      "day": "2021-01-08",
      "expectedHours": 4,
      "worked": 4,
    },
  ],
  "expectedHours": 24,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 100,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 0,
  "workedHours": 24,
}
`;

exports[`Workload Calculation should calculate the workload for one week with absences 1`] = `
Object {
  "absence": 8,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-04",
      "expectedHours": 0,
      "worked": 0,
    },
    Object {
      "day": "2021-01-05",
      "expectedHours": 0,
      "worked": 0,
    },
    Object {
      "day": "2021-01-06",
      "expectedHours": 0,
      "worked": 0,
    },
    Object {
      "day": "2021-01-07",
      "expectedHours": 0,
      "worked": 0,
    },
    Object {
      "day": "2021-01-08",
      "expectedHours": 0,
      "worked": 0,
    },
  ],
  "expectedHours": 8,
  "holidays": 8,
  "notPlanned": 8,
  "percentage": 100,
  "sick": 8,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 8,
  "workedHours": 8,
}
`;

exports[`Workload Calculation should calculate the workload for one week with overtime and undertime 1`] = `
Object {
  "absence": 0,
  "days": Array [
    Object {
      "day": "2021-01-01",
      "expectedHours": 8,
      "worked": 10,
    },
    Object {
      "day": "2021-01-04",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-05",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-06",
      "expectedHours": 8,
      "worked": 8,
    },
    Object {
      "day": "2021-01-07",
      "expectedHours": 8,
      "worked": 6,
    },
    Object {
      "day": "2021-01-08",
      "expectedHours": 8,
      "worked": 8,
    },
  ],
  "expectedHours": 48,
  "holidays": 0,
  "notPlanned": 0,
  "percentage": 100,
  "sick": 0,
  "user": Object {
    "id": "92ee20b5-0721-4d43-8d60-6dc87ccc50e8",
  },
  "vacations": 0,
  "workedHours": 48,
}
`;
